<?xml version='1.0' encoding='UTF-8'?>
<resources>
    <string name="app_name">易米融</string>
    <string name="about_us">关于我们</string>
    <string name="account">账户</string>
    <string name="account_phone">123****5678</string>
    <string name="account_yue">账户余额</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="back">返回</string>
    <string name="baifenhao">%</string>
    <string name="bank">银行</string>
    <string name="bank_card_manage">银行卡管理</string>
    <string name="bank_card_no">卡号</string>
    <string name="bank_card_owner_info">持卡人信息</string>
    <string name="bank_identify_info">此银行卡须为实名认证信息中所有者所有</string>
    <string name="bank_info">银行卡信息</string>
    <string name="bank_xiane">单笔限额5万，单日限额30万，单月限额100万</string>
    <string name="baozhang_message">资金账户由第三方支付平台提供支付服务</string>
    <string name="benjin">本金</string>
    <string name="buy_money_num">购买金额</string>
    <string name="buy_now">立即购买</string>
    <string name="buy_record">购买记录</string>
    <string name="cancel">取消</string>
    <string name="card_quota">本卡单笔限额5万，单日限额30万，单月限额100万</string>
    <string name="ci">次</string>
    <string name="close">关闭</string>
    <string name="confirm">确认</string>
    <string name="confirm_zhuanchu">确认转出</string>
    <string name="contact_kefu">请联系客服</string>
    <string name="dangqian_dingqi_profit">当前产品收益</string>
    <string name="dangqian_tiyanjin_profit">当前体验金收益</string>
    <string name="dangri_qixi">当日计算</string>
    <string name="dingqi_invest_sum">产品投资总额</string>
    <string name="downloading">下载更新</string>
    <string name="eight">8</string>
    <string name="gesture_password">手势密码</string>
    <string name="find_pay_pass_info">"为保证您的资金安全，在找回支付密码前
需先验证您绑卡的身份信息"</string>
    <string name="first_jiaoyi_time">首次交易时间</string>
    <string name="five">5</string>
    <string name="float_zero">0.00</string>
    <string name="forget_gesture_password">忘记手势密码？</string>
    <string name="four">4</string>
    <string name="gonggao">公告</string>
    <string name="hint_input_bank_card_name">请输入持卡人姓名</string>
    <string name="hint_input_bank_card_no">请输入银行卡号</string>
    <string name="hint_input_identify_no">请输入身份证号</string>
    <string name="hint_input_real_idno">请输入已实名认证的身份证号码</string>
    <string name="hint_input_real_name">请输入真实姓名</string>
    <string name="hint_input_sms_yanzhengma">请输入短信验证码</string>
    <string name="hint_licai_qixian_tian">理财天数</string>
    <string name="huan_kuan_way">还款方式</string>
    <string name="huan_kuan_zhi_yue">还款至账户余额</string>
    <string name="huizhi_lock_info">绘制解锁图案，请至少连接4个点</string>
    <string name="huodong">活动说明</string>
    <string name="huoqibao">易米宝</string>
    <string name="id_name_info">持卡人姓名必须和身份证号码完全匹配，核实后不可更改</string>
    <string name="idno">身份证</string>
    <string name="if_doubt">如果您对本次交易有任何疑问</string>
    <string name="image_content">Image</string>
    <string name="info">提示</string>
    <string name="input_pay_pass">请输入支付密码</string>
    <string name="input_yuliu_shoujihao">请输入银行预留手机号</string>
    <string name="int_zero">0</string>
    <string name="invest_history">投资记录(笔)</string>
    <string name="invite_friends">邀请好友</string>
    <string name="jiangli_jine">奖励金额</string>
    <string name="jiaoyi_hao">交易号</string>
    <string name="jinri_tixian">今日提现次数全部用完，不可提现</string>
    <string name="kefu_phone">客服电话</string>
    <string name="kuaidian_zhuan_qian_zhong">玩命加载中</string>
    <string name="leiji_jiangli">累计奖励(元)</string>
    <string name="licai_jine">理财金额</string>
    <string name="liji_yaoqing">立即邀请</string>
    <string name="liushuihao">流水号</string>
    <string name="load_fail">加载失败</string>
    <string name="load_succeed">加载成功</string>
    <string name="loading">正在加载…</string>
    <string name="login">登录</string>
    <string name="login_other_account">登录其他账户</string>
    <string name="logout">退出登录</string>
    <string name="mail">官方邮箱</string>
    <string name="micromsg">微信服务号</string>
    <string name="micromsg_barcode">微信扫一扫或保存图片在微信中识别打开</string>
    <string name="modify_gesture_password">修改手势密码</string>
    <string name="myqrcode">我的二维码</string>
    <string name="name">姓名</string>
    <string name="next_step">下一步</string>
    <string name="nine">9</string>
    <string name="ok">确定</string>
    <string name="one">1</string>
    <string name="pay_back_info">还款信息</string>
    <string name="pay_back_num">还款金额</string>
    <string name="pay_back_way">还款方式</string>
    <string name="pay_money">充值金额（元）</string>
    <string name="pay_ok">确定充值</string>
    <string name="pay_success">充值成功</string>
    <string name="pay_type">支付方式</string>
    <string name="payinfo">"到期当日不计收益；"</string>
    <string name="payinfo2">"到期当日14:30—16:30将本金和收益一同还款至您的账户余额中，不受周末和节假日的影响。"</string>
    <string name="phone_number">手机号</string>
    <string name="product_detail">产品详情</string>
    <string name="product_name">产品名称</string>
    <string name="profit">收益</string>
    <string name="proj_desc">项目描述</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="qq_group">198595909</string>
    <string name="qq_qun">QQ群</string>
    <string name="question_anwser">常见问题</string>
    <string name="register">注册</string>
    <string name="remark">备注</string>
    <string name="reset_login_pass">重置登录密码</string>
    <string name="reset_pay_pass">重置支付密码</string>
    <string name="scan_code">扫一扫二维码，加入易米融</string>
    <string name="select_bank">请选择银行</string>
    <string name="service_mail">kefu@cmibank.com</string>
    <string name="service_phone">400–871–7777</string>
    <string name="service_time">服务时间:8:00–20:00</string>
    <string name="set_pay_pass_info">为了您的账户安全,请不要与银行卡密码一致</string>
    <string name="set_success">设置成功</string>
    <string name="seven">7</string>
    <string name="shenfen_renzheng">身份认证</string>
    <string name="shiming_renzheng">实名认证</string>
    <string name="shouru">收入</string>
    <string name="shouyi_jisuanqi">收益计算器</string>
    <string name="six">6</string>
    <string name="static_lilv">0.00</string>
    <string name="submit">提交</string>
    <string name="three">3</string>
    <string name="tian">天</string>
    <string name="time">时间</string>
    <string name="title_bar_back">返回</string>
    <string name="title_bar_title">标题</string>
    <string name="tixian_dao">提现到</string>
    <string name="tixian_shijian">16点前提现当日到账，16点后提现次日到账，节假日顺延</string>
    <string name="two">2</string>
    <string name="type">类型</string>
    <string name="unidentify">身份信息未认证</string>
    <string name="wangcaigou">易米融</string>
    <string name="wangcaigou_version">易米融 1.0.0</string>
    <string name="web_wongcai">www.cmibank.com</string>
    <string name="website">网站</string>
    <string name="yanzhengma">验证码</string>
    <string name="yaoqing_info">您的邀请奖励将在好友完成首次交易后立即发放哦</string>
    <string name="yaoqing_jiangli">邀请好友奖励</string>
    <string name="yaoqing_jiangli_yuan">邀请奖励(元)</string>
    <string name="yi_fasong_sms_code">已发送短信验证码到您的手机</string>
    <string name="yi_yuan_qi_gou">1元起投</string>
    <string name="yigoumai">已购买0人</string>
    <string name="yijian_fankui">意见反馈</string>
    <string name="yijiaoyi_haoyou">已交易好友</string>
    <string name="yiyaoqing_haoyou">已邀请好友</string>
    <string name="yongjin_jiangli">好友佣金奖励</string>
    <string name="yuan">元</string>
    <string name="yuliu_shoujihao">预留手机号</string>
    <string name="yuqi_nianhua">预期年化收益率</string>
    <string name="yuqi_profit">历史相同产品回报(元)</string>
    <string name="yuqi_shouyi">预期收益</string>
    <string name="zero">0</string>
    <string name="zhengzai_fashou">正在发售</string>
    <string name="zhifu_edu">支付额度和提现到账时间会根据银行规定适时调整，仅供参考</string>
    <string name="zhuanchu">转出</string>
    <string name="zhuanchu_to_account_yue">转出到余额</string>
    <string name="zhuanchu_to_bank">转出到银行卡</string>
    <string name="zhuanru">转入</string>
    <string name="zhuce_haoma">注册号码</string>
    <string name="zhuce_shijian">注册时间</string>
    <string name="zijin_secu">多重保障</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refreshing">正在刷新…</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="home_control_text">资产</string>
    <string name="wc_control_text">易米宝</string>
    <string name="invite_control_text">首页</string>
    <string name="mine_control_text">我</string>
    <string name="keyong_yue">可用余额</string>
    <string name="wang_cai_bao">易米宝</string>
    <string name="dq_asset">定期资产</string>
    <string name="zhuce_tishi">点击上面的“注册”按钮，即表示你同意</string>
    <string name="woncai_xieyi">《易米融用户协议》</string>
    <string name="sms_text">短信验证码已发送，请填写验证码</string>
    <string name="user">账户</string>
    <string name="fxts">风险提示报告书</string>
    <string name="mzsm">免责声明</string>
    <string name="insurance">安全保障</string>
</resources>