<?xml version='1.0' encoding='UTF-8'?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center_vertical"
              android:background="@drawable/selector_item">

    <TextView
        android:id="@+id/activity_yaoqing_award_item_number"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="40dp"
        android:text="@string/zhuce_haoma"
        android:gravity="center_vertical|left"
        android:textSize="14sp"
        android:textColor="#3e3e3e"
        android:paddingLeft="13dp"/>

    <TextView
        android:id="@+id/activity_yaoqing_award_item_time"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="40dp"
        android:text="@string/first_jiaoyi_time"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="#3e3e3e"/>

    <TextView
        android:id="@+id/activity_yaoqing_award_item_money"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="40dp"
        android:text="@string/jiangli_jine"
        android:gravity="center_vertical|right"
        android:textSize="14sp"
        android:textColor="#3e3e3e"
        android:paddingRight="13dp"/>

</LinearLayout>