<?xml version='1.0' encoding='UTF-8'?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:background="@color/light_gray">

    <include
        android:id="@+id/activity_sms_code_title"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_sms_code_title"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity_sms_code_numer"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/yi_fasong_sms_code"
            android:textColor="@color/look_details_color"
            android:textSize="16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <TextView
                android:id="@+id/activity_sms_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/yanzhengma"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/activity_sms_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/activity_sms_code_tv"
                android:background="@null"
                android:hint="@string/hint_input_sms_yanzhengma"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="6"
                android:paddingLeft="36dp"
                android:singleLine="true"
                android:textColor="#000000"
                android:textColorHint="#a6a6a6"
                android:textCursorDrawable="@null"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_sms_code_timer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="发送验证码"
                android:textColor="#ff4747"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dark_gray"/>

        <Button
            android:id="@+id/activity_sms_code_btnok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/selector_invite_btn"
            android:gravity="center"
            android:text="@string/next_step"
            android:textColor="#ff9898"
            android:textSize="16sp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="46dp">

        <TextView
            android:id="@+id/activity_sms_code_message1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/if_doubt"
            android:textColor="#9b9b9b"
            android:textSize="13sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_sms_code_message1"
            android:layout_marginTop="3dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/activity_sms_code_message2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_kefu"
                android:textColor="#9b9b9b"
                android:textSize="13sp"/>

            <TextView
                android:id="@+id/activity_sms_code_service_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/activity_sms_code_message2"
                android:clickable="true"
                android:text="@string/service_phone"
                android:textColor="@color/control_text_pressed"
                android:textSize="13sp"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>